--- a/Project1/assets/css/style.css
+++ b/Project1/assets/css/style.css
@@ -22,6 +22,15 @@ a {
     text-decoration: none;
 }
 
+.heading-lv2 {
+    color: #171100;
+    font-family: var(--font-heading);
+    font-size: 3.8rem;
+    font-weight: 700;
+    line-height: 1.26;
+    letter-spacing: -0.76px;
+}
+
 .main-content {
     width: 1170px;
     max-width: calc(100% - 48px);
@@ -104,7 +113,7 @@ header.fixed {
 }
 
 
-/* =============hero============== */
+/* ===============hero================ */
 .hero {
     padding: 56px 0 65px;
     background: #FFFCF4;
@@ -116,7 +125,7 @@ header.fixed {
 }
 
 
-/* =============hero-left============== */
+/* ================hero-left================= */
 .hero .media-block {
     position: relative;
     width: 48%;
@@ -273,4 +282,132 @@ header.fixed {
 
 .hero .stats strong:nth-child(2) {
     margin-left: 28px;
+}
+
+
+/* ====================popular===================== */
+.popular {
+    padding: 5px;
+    margin-top: 135px;
+}
+
+.popular-top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.popular-top .desc {
+    margin-top: 16px;
+    width: 458px;
+    color: #5F5B53;
+    font-size: 1.8rem;
+    line-height: 1.67;
+}
+
+.popular-top .controls {
+    display: flex;
+    gap: 18px;
+}
+
+.popular-top .control-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: transparent;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+}
+
+.popular-top .control-btn:hover {
+    background: var(--primary-color);
+    color: #fff;
+    cursor: pointer;
+}
+
+
+/* ===========popular-bottom=========== */
+.popular-bottom {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 55px;
+}
+
+.popular-bottom .card {
+    width: 370px;
+    height: 466px;
+    border-radius: 12px;
+    background: #FFF;
+    box-shadow: 0 18px 36px 0 rgba(0, 0, 0, 0.05);
+}
+
+.popular-bottom .media-block img {
+    width: 370px;
+    height: 278px;
+    object-fit: cover;
+    border-radius: 12px 12px 0 0;
+}
+
+.popular-bottom .content-block {
+    padding: 16px 22px 22px;
+}
+
+.popular-bottom .content-block .title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.popular-bottom .rating {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popular-bottom .rating .number {
+    margin-left: 6px;
+    color: #FEA31B;
+    font-size: 1.6rem;
+    line-height: 1.8;
+}
+
+.popular-bottom .title-h2 {
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+}
+
+.popular-bottom .price {
+    display: flex;
+    justify-content: space-between;
+}
+
+.popular-bottom .money {
+    margin-top: 22px;
+    color: #171100;
+    font-size: 1.8rem;
+    font-weight: 600;
+    line-height: 1.67;
+}
+
+.popular-bottom .content {
+    margin-top: 6px;
+    color: #5F5B53;
+    font-size: 1.4rem;
+    line-height: 1.86;
+}
+
+.popular-bottom .btn-book {
+    margin-top: 12px;
+    width: 118px;
+    height: 50px;
+    border-radius: 25px;
+    background: #171100;
+}
+
+.popular-bottom .btn-book:hover {
+    background: #FFB900;
 }
