--- a/Project1/assets/css/style.css
+++ b/Project1/assets/css/style.css
@@ -432,8 +432,15 @@ header.fixed {
     background: #2E2100;
 }
 
-.feedback-item {
+.feedback-list {
     display: flex;
+    overflow: hidden;
+}
+
+.feedback-item {
+    width: 100%;
+    display: flex;
+    flex-shrink: 0;
 }
 
 .feedback-item .avatar {
