--- a/Project1/assets/css/style.css
+++ b/Project1/assets/css/style.css
@@ -566,3 +566,98 @@ header.fixed {
     height: 440px;
     border-radius: 20px;
 }
+
+/* ================blogs========================= */
+.blogs {
+    background: #FFFCF4;
+    margin-top: 135px;
+    padding: 96px 0;
+
+}
+
+.blogs .blog-top {
+    text-align: center;
+}
+
+.blogs .blog-top .desc {
+    color: #696262;
+    font-size: 1.6rem;
+    line-height: 1.75;
+    width: 448px;
+    margin: 16px auto 0;
+}
+
+.blogs .blog-list {
+    display: flex;
+    margin-top: 55px;
+    gap: 30px;
+}
+
+.blogs .item {
+    width: 33.3%;
+    border-radius: 16px;
+    background: #FFF;
+}
+
+.blogs .item:hover {
+    box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.05);
+}
+
+.blogs .item .thumb {
+    width: 100%;
+    border-radius: 16px 16px 0 0;
+    height: 250px;
+    object-fit: cover;
+}
+
+.blogs .item .info {
+    padding: 20px 20px 28px;
+}
+
+.blogs .item .date {
+    position: relative;
+    padding-bottom: 12px;
+    display: inline-flex;
+    align-items: center;
+    color: #5F5B53;
+    font-size: 1.4rem;
+    line-height: 1.86;
+}
+
+.blogs .item .date::before {
+    content: "";
+    margin-right: 4px;
+    display: inline-block;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: var(--primary-color);
+}
+
+.blogs .item .date::after {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    content: "";
+    display: inline-block;
+    right: -27px;
+    height: 1px;
+    border-radius: 0.5px;
+    background: #E2DFDA;
+}
+
+.blogs .item .title {
+    color: #171100;
+    font-size: 1.6rem;
+    font-weight: 600;
+    line-height: 1.75;
+    margin-top: 12px;
+}
+
+.blogs .item .btn {
+    margin-top: 12px;
+}
+
+.blogs .item .btn:hover {
+    background: var(--primary-color);
+}
